--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.13)
 
 project(LeetCode)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
+# set(CMAKE_BUILD_TYPE Release)
 
 include_directories(${PROJECT_SOURCE_DIR})
 
