--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,3 +18,4 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 #===========#
 
 add_subdirectory(support)
+add_subdirectory(leetcode)
