Implement problem 10 to 17. Implementing problem 18.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(LeetCode)
 
 set(CMAKE_CXX_STANDARD 17)
 # set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_CXX_FLAGS "-O1")
 
 include_directories(${PROJECT_SOURCE_DIR})
 
