--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ cmake_minimum_required(VERSION 3.13)
 project(LeetCode)
 
 set(CMAKE_CXX_STANDARD 17)
-# set(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_CXX_FLAGS "-O1")
+
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    # Disable the warning about "[[nodiscard]]".
+    # TODO: Do this in more elegant way.
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-attributes")
+endif()
 
 include_directories(${PROJECT_SOURCE_DIR})
 
