--- a/test/support/CMakeLists.txt
+++ b/test/support/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
 
 add_executable(Google_Tests_support_run
-               testUFSet.cpp ${PROJECT_SOURCE_DIR}/support/UFSet.h
-               )
+               testUFSet.cpp
+               testIO.cpp)
 target_link_libraries(Google_Tests_support_run gtest gtest_main)
