--- a/test/support/CMakeLists.txt
+++ b/test/support/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 
 add_executable(Google_Tests_support_run
+               testCommon.cpp
                testUFSet.cpp
                testIO.cpp)
 target_link_libraries(Google_Tests_support_run gtest gtest_main)
