--- a/test/support/CMakeLists.txt
+++ b/test/support/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 3.13)
 add_executable(Google_Tests_support_run
                testCommon.cpp
                testUFSet.cpp
-               testIO.cpp)
+               testIO.cpp
+               testString.cpp)
 target_link_libraries(Google_Tests_support_run gtest gtest_main)
