--- a/test/support/CMakeLists.txt
+++ b/test/support/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 
 add_executable(Google_Tests_support_run
                testCommon.cpp
+               testGraph.cpp
                testUFSet.cpp
                testIO.cpp
                testString.cpp)
