Complete Problem 81 ~ 85, add some functions of forward list.

--- a/test/support/CMakeLists.txt
+++ b/test/support/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.13)
 
 add_executable(Google_Tests_support_run
+               testForwardList.cpp
                testCommon.cpp
                testGraph.cpp
                testUFSet.cpp
                testIO.cpp
                testString.cpp)
+target_link_libraries(Google_Tests_support_run Leetcode_Support_ForwardList)
 target_link_libraries(Google_Tests_support_run gtest gtest_main)
