Fix in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ project(LeetCode)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# /MDd: To avoid the linking error
-add_compile_options("/MDd")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    # /MDd: To avoid the linking error
+    add_compile_options("/MDd")
+endif ()
 
 include_directories(${PROJECT_SOURCE_DIR})
 
